--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "joi": "^17.10.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.0.0",
+        "mongoose-id-validator": "^0.6.0",
+        "mongoose-paginate-v2": "^1.7.4",
         "multer": "1.4.5-lts.1",
         "uuid": "^9.0.1"
     }
