--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon -r esm index.js"
+        "start": "nodemon index.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@jest/globals": "^29.7.0",
         "bcrypt": "^5.1.1",
-        "cookie": "^0.5.0",
-        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "esm": "^3.2.25",
         "express": "^4.18.2",
         "i18next": "^23.5.1",
         "i18next-http-middleware": "^3.3.2",
@@ -25,6 +24,10 @@
         "mongoose-id-validator": "^0.6.0",
         "mongoose-paginate-v2": "^1.7.4",
         "multer": "1.4.5-lts.1",
+        "supertest": "^6.3.3",
         "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0"
     }
 }
